--- a/index.html
+++ b/index.html
@@ -2721,14 +2721,18 @@ if(window.visualViewport){
   const VPY=.42; // horizon (proportion hauteur)
   const ROAD_NEAR=.72, ROAD_FAR=.055; // largeur route
 
-  // ── GYROSCOPE : inclinaison du téléphone → route qui tourne ──
+  // ── GYROSCOPE : gamma=direction, beta=vitesse ──
   let gyroShift=0, gyroTarget=0;
+  let gyroSpeed=0.018, gyroSpeedTarget=0.018;
   function _setupGyro(){
     window.addEventListener('deviceorientation', e=>{
-      // gamma = inclinaison gauche/droite (-90..+90)
+      // gamma = gauche/droite → direction route
       const g = e.gamma||0;
-      // Limiter à ±40°, mapper vers ±W*0.28
       gyroTarget = Math.max(-40,Math.min(40,g)) / 40 * W * 0.28;
+      // beta = avant/arrière → vitesse (téléphone tenu à ~45°)
+      const b = (e.beta||0) - 45;
+      const norm = Math.max(-1, Math.min(1, b / 30));
+      gyroSpeedTarget = Math.max(0.002, 0.018 + norm * 0.038);
     });
   }
   // iOS 13+ nécessite une permission explicite — écouter le premier tap n'importe où
@@ -2751,8 +2755,9 @@ if(window.visualViewport){
   function roadY(z){return VPY*H+(1-VPY)*H*(1-z);}
 
   function draw(){
-    // Lerp fluide vers la cible gyro (inertie naturelle)
+    // Lerp fluide (inertie naturelle)
     gyroShift += (gyroTarget - gyroShift) * 0.07;
+    gyroSpeed += (gyroSpeedTarget - gyroSpeed) * 0.05;
 
     ctx.clearRect(0,0,W,H);
     const hy=VPY*H;
@@ -2802,7 +2807,7 @@ if(window.visualViewport){
     ctx.beginPath(); ctx.moveTo(roadX(.34,0),hy);  ctx.lineTo(roadX(.34,1),H);  ctx.stroke();
 
     // Tirets blancs centraux (perspective)
-    dashOff=(dashOff+.018)%(1/12);
+    dashOff=(dashOff+gyroSpeed)%(1/12);
     for(let i=0;i<14;i++){
       let t=(i/13+dashOff)%1;
       if(t<.001) t=.001;
